--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="petstyles.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-<link href="https://fonts.googleapis.com/css?family=Corben" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Corben:700" rel="stylesheet">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>
 var __adobewebfontsappname__="dreamweaver"
@@ -35,7 +35,7 @@ function MM_swapImage() { //v3.0
 <script src="http://use.edgefonts.net/titan-one:n4:default;strumpf-std:n7:default.js" type="text/javascript"></script>
 
 <style>
-@import url('https://fonts.googleapis.com/css?family=Corben');
+@import url('https://fonts.googleapis.com/css?family=Corben:700');
 .optcenter {
 	margin-left: 62px;
 	margin-right: 62px;
