--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ MiNiONs</a>
 <a href="http://validator.w3.org/" target="new"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
 <br>
 <a href="index.html">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="scrumba.html">Scrumba</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="siren.html">Siren</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="stampy.html">Stampy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="index.html">Tywin</a>
-<br>crafted and coded with <span style="color:#FF0571;">&#8249;3</span> for SCC class CPM 240<br>all images, content, and design &copy;2015 buddhabunnee // <a href="http://buddhabunnee.com/" target="new">Sarah Jane Strohmeyer</a> <span style="font-size:14px;">[<a href="mailto:strohmsj@slu.edu">e-mail me</a>]</span></p>
+<br>crafted and coded with <span style="color:#FF0571;">&#8249;3</span> for SCC class CPM 240<br>all images, content, and design &copy;2015 buddhabunnee // <a href="" target="new">Sarah Jane Strohmeyer</a> <span style="font-size:14px;">[<a href="mailto:strohmsj@slu.edu">e-mail me</a>]</span></p>
 </footer>
 
 
