--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ MiNiONs</a>
 <h1>✨&nbsp;Hello and Welcome!&nbsp;✨</h1>
 <img class="optcenter" src="img/optcenter.jpg" width="830" height="327" alt="Siren and Scrumba"/>
 <p class="fun">Welcome to "Sarah's Minions!" This site showcases individual pages for each of the four animals currently taking up residence in my home! For each animal, you will find basic vital information, biographical information, and a personality profile! In addition, each animal's page features several photos (and maybe a video or two!) for your viewing pleasure. <strong>Just click on the animal's portrait at the very top of the site to visit their page!</strong></p> 
-<p class="fun2">I love these animals dearly, and they've been with me through the happiest and the hardest of times. Please enjoy your stay and feel free to visit <a href="http://github.com/buddhabunnee/" target="new">my main website</a> for more about me, my work, and my life! Thank you, danke sehr, どうもありがとうござい, merci beaucoup, and 谢谢 !</p>
+<p class="fun2">I love these animals dearly, and they've been with me through the happiest and the hardest of times. Please enjoy your stay and feel free to visit <a href="http://github.com/buddhabunnee/" target="new">my main website</a> for more about me, my work, and my life! Thank you, danke sehr, どうもありがとうございます, merci beaucoup, and 谢谢 !</p>
 
 <br>
 <div class="fun2">
