--- a/scrumba.html
+++ b/scrumba.html
@@ -100,16 +100,16 @@ MiNiONs</a>
 <p class="hey">
 <span style="font-size:20px; font-weight:bold;">Background</span>
 <br>
-I first met Scrumba when she was brought to my work at the <a href="http://www.hsmo.org/" title="HSMO" target="new">Humane Society of Missouri in Chesterfield Valley</a>, where I worked for about 3 years in my 20s. She was found as a stray roaming around Ballwin, MO. She was much thinner then, and she was also pregnant when she came to us. Sadly, however, when she gave birth to her kittens while in the shelter, she buried them in her litterbox. She may've done this because she felt the kittens would not survive in her current, stressed-out situation. Maybe it was an accident, or she just wasn't ready for the responsibilities of motherhood.
+Nunc placerat odio nec mauris accumsan, a ultricies risus tempus. Mauris ultrices, enim a rhoncus ullamcorper, magna tellus pretium arcu, sed mollis libero magna id metus. Morbi pulvinar massa enim, a mattis sem vehicula id. Sed eu lorem a sem pharetra faucibus finibus sed mauris. Mauris euismod elementum lectus sit amet tincidunt. Morbi vel nisl pretium, auctor lorem vitae, efficitur mauris. Ut tristique libero dignissim, sollicitudin tortor sit amet, auctor velit. Quisque euismod facilisis erat, vel sagittis lorem ullamcorper ac.
 <br>
 <br>
-Either way, she came through and was easily the noisiest cat in the shelter. She had the funniest cry and it was almost constant. It only stopped when I came by and gave her love and attention. Whenever I came by her cage, she got very excited to see me. When I let her out, she didn't attempt to run or hide anywhere, she just wanted to be in my lap, petted and snuggled. I couldn't resist and brought her home before she ever even went out of the adoption floor.
+Donec volutpat id leo quis faucibus. Nulla facilisi. Fusce placerat, nisi vitae aliquet eleifend, magna quam aliquet nulla, in cursus quam mauris nec justo. Maecenas volutpat lacinia nisi, id egestas odio ullamcorper eget. In accumsan orci arcu, viverra ornare purus consectetur id. Vivamus elementum iaculis venenatis. Nunc pulvinar ultricies orci at mollis.
 </p>
 
 <p class="hey">
 <span style="font-size:20px; font-weight:bold;">Personality</span>
 <br>
-Scrumba is first and foremost a whiner cry-baby at home. She chirps and cries at nearly anything. Especially adorable is when either my husband or I leave our home, she goes to the door and cries for 3-5 minutes. After that, I think she forgets. Scrumba loves to heavily purr and be petted but only on -her terms- .. she will approach when she is in the 'mood', which is several times a day. Otherwise, she cries and protests at even the slightest touch. It goes without saying that she holds a special place in my heart, as being the first cat I ever adopted. Before I met my husband in 2010, I had never lived with cats. I'm so grateful he introduced me to cats and their funny and sweet ways!
+Curabitur sollicitudin, neque eu accumsan sollicitudin, magna dolor luctus ligula, pellentesque tincidunt eros lacus aliquet velit. Nam mattis, velit vel dictum iaculis, ex libero mattis felis, iaculis fringilla orci tortor vitae libero. Duis pharetra nisl vitae est imperdiet scelerisque et ut dui. Sed lobortis hendrerit sem, sagittis vestibulum eros posuere nec. In at luctus nisi. Donec nec sapien condimentum, cursus leo id, feugiat lectus. Suspendisse sit amet ultrices lacus. Duis tortor diam, commodo non nisi eget, dictum varius nisl. Aliquam elementum augue nec odio hendrerit, tristique maximus tortor vulputate. 
 </p>
 
 
